added required features

--- a/health-tracker-app/src/app/app.component.html
+++ b/health-tracker-app/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-workout-form></app-workout-form>
-<app-user-workout></app-user-workout>
-<app-workout-chart></app-workout-chart>
+<div class="space-y-6">
+  <app-workout-form class="p-4"></app-workout-form>
+  <app-user-workout class="p-4"></app-user-workout>
+  <app-workout-chart class="p-4"></app-workout-chart>
+</div>
